fixed padding on mobile for react-poc

--- a/packages/ontario-design-system-component-library/src/components/ontario-header/ontario-header.scss
+++ b/packages/ontario-design-system-component-library/src/components/ontario-header/ontario-header.scss
@@ -140,7 +140,7 @@ $ontario-header-logo-width--mobile: 45px;
 	font-weight: $ontario-font-weights-semi-bold;
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	text-decoration: none;
-	padding: calc($ontario-spacing-3 - ($ontario-spacing-1 / 3.25)) $ontario-spacing-5;
+	padding: calc($ontario-spacing-3 - ($ontario-spacing-1 / 3.25)) $ontario-spacing-6;
 
 	&:hover {
 		text-decoration: underline;
